public_html/2015/secret-solution/83/170/source/compile
source.c: In function ‘main’:
source.c:8:18: error: subscripted value is neither array nor pointer nor vector
     scanf("%d",&A[i]);
                  ^
source.c:11:18: error: subscripted value is neither array nor pointer nor vector
     printf("%c",A[i]);
                  ^
